--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,20 @@ body.dark .switch::before{
     font-size: 1.5rem;
     margin-right: 0.5rem;
   }
+
+  label {
+    display: inline-block;
+    padding: 10px;
+    background-color: var(--darker-body-color);
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.4s;
+  }
+  label:hover {
+    background-color: var(--primary-color);
+    color: var(--toggle-color);
+  }
   
 .file-upload {
     display: flex;
