--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,9 @@ body.dark .switch::before{
   .submit-btn:hover {
     background-color: var(--primary-color-hover);
   }
+  .submit-btn:disabled{
+    background-color: black;
+  }
 
   @media (max-width: 768px) {
     .input-container {
